--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^0.27.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "mongoose": "^6.3.1",
     "nodemon": "^2.0.15"
