--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "typeface-montserrat": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
